# clawd

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  authors.json  install.sh  package.json  pr.sh  readme-schema.json  skill-schema.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: config.rs  download.rs  error.rs  list.rs  main.rs  prompts.rs  upgrade.rs
cli/src/api/: clawd.rs  github.rs  mod.rs
skills/anthropics/algorithmic-art/: README.mdx
skills/anthropics/brand-guidelines/: README.mdx
skills/anthropics/canvas-design/: README.mdx
skills/anthropics/doc-coauthoring/: README.mdx
skills/anthropics/docx/: README.mdx
skills/anthropics/frontend-design/: README.mdx
skills/anthropics/internal-comms/: README.mdx
skills/anthropics/mcp-builder/: README.mdx
skills/anthropics/pdf/: README.mdx
skills/anthropics/pptx/: README.mdx
skills/anthropics/skill-creator/: README.mdx
skills/anthropics/slack-gif-creator/: README.mdx
skills/anthropics/theme-factory/: README.mdx
skills/anthropics/web-artifacts-builder/: README.mdx
skills/anthropics/webapp-testing/: README.mdx
skills/anthropics/xlsx/: README.mdx
skills/dcodes/brainstorming/: README.mdx
skills/obra/brainstorming/: README.mdx
skills/obra/condition-based-waiting/: README.mdx
skills/obra/defense-in-depth/: README.mdx
skills/obra/dispatching-parallel-agents/: README.mdx
skills/obra/executing-plans/: README.mdx
skills/obra/finishing-a-development-branch/: README.mdx
skills/obra/receiving-code-review/: README.mdx
tests/: validate.test.ts
(+13 files in other folders)
